# agent

./: .dockerignore  .gitignore  .gitmodules  .hadolint.yaml  .markdownlint.yaml  .prospector.yaml  Dockerfile.linux  Makefile  development.md  download-url.txt  internal.md  main.py  pyproject.toml  readme.md
.github/: pull_request_template.md
.github/workflows/: docker-push.yml
agent/: directories.py  main.py  repository.py  utils.py  vcs_converter.py
agent/strategy/: __init__.py  strategy.py
agent/strategy/ai_engine/: __init__.py
agent/strategy/backend_analysis/: __init__.py
agent/strategy/commit_analysis/: full_analysis.py
agent/strategy/dependencies/: __init__.py  matcher.py
agent/strategy/dependency_check/: __init__.py
agent/strategy/oss/: __init__.py
agent/strategy/oss/dependencies/: __init__.py  matcher.py
agent/strategy/oss/dependency_check/: __init__.py
agent/strategy/oss/scancode/: __init__.py
agent/strategy/quality/: __init__.py
agent/strategy/quality/linguist/: __init__.py
agent/strategy/quality/linters/: __init__.py  cppcheck.py  eslint.py  (+11 more)
agent/strategy/scancode/: __init__.py
docker/: Dockerfile  readme.md
docker-build/: Dockerfile  Dockerfile.linux  Dockerfile.windows  readme.md
docker-build/scripts/: build.sh
docker/linux/: Dockerfile.build  Dockerfile.run
docker/windows/: Dockerfile.base  Dockerfile.build  Dockerfile.run
docker/windows/assets/: wine-do.sh  wine-init.sh
lib/js/: eslint.json  jshint.json  jslinters  jslinters.js  package.json
scripts/: agent  agent.bat  agent.ps1  agent.sh  debug.sh  run-bin.sh
(+7 files in other folders)
