[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["Enrico Z. Borba <enrico.borba@toptal.com>"]
readme = "readme.md"
packages = [{include = "agent"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
agent = 'agent.main:main'
