[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["Enrico Z. Borba <enrico.borba@toptal.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
gitpython = "3.1.42"
jwt = "1.3.1"
sentry-sdk = "1.41.0"
torch = "2.2.2"
transformers = "4.35.2"
llama-index = "0.9.30"
openai = "1.7.2"
tree-sitter = "0.20.4"
tree-sitter-languages = "1.9.1"
chardet = "^5.2"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = 'main:main'
